# 2048-redemption-

./: .clang-format  CMakeLists.txt  README.md
src/cpp/: cubicBezier.cpp  main.cpp  render.cpp  scoreNumberEffect.cpp
src/headers/: board.h  cubicBezier.h  game.h  render.h  roundedRectangle.h  scoreNumberEffect.h  tile.h
